# fast_api_todo

./: .pre-commit-config.yaml  pyproject.toml  requirements.txt
fast_api_todo/: app.py
tests/: test_app.py
